--- a/docs/esterni/manuale_utente/manuale_utente.tex
+++ b/docs/esterni/manuale_utente/manuale_utente.tex
@@ -19,9 +19,9 @@
 Questo documento descrive le funzionalità del programma a coloro che dovessero usufruirne in qualità di utente con privilegi di base.
 }
 
-\addversione{0.0.0}{05/09/2023}{Soldà Matteo}{}{Stesura scheletro}
-\addversione{0.0.1}{07/09/2023}{Soldà Matteo}{}{Stesura prima bozza contenuto}
-\addversione{0.0.2}{13/09/2023}{Soldà Matteo}{}{Aggiunta delle immagini}
+\addversione{0.0.0}{05/09/2023}{Soldà Matteo}{Cavaliere Erica}{Stesura scheletro}
+\addversione{0.0.1}{07/09/2023}{Soldà Matteo}{Cavaliere Erica}{Stesura prima bozza contenuto}
+\addversione{0.0.2}{13/09/2023}{Soldà Matteo}{Cavaliere Erica}{Aggiunta delle immagini}
 \begin{document}
 \makeindexdetails
 \makefrontpage \makeversioni
